# SqliteWrapper

./: CMakeLists.txt  LICENSE
include/: connection.h  connection_config.h  connection_creator.h  create_conn_exception.h  statement.h
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  connection.cpp  connection_config.cpp  connection_creator.cpp  create_conn_exception.cpp  statement.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_connection.cpp  test_connection_creator.cpp  test_statement.cpp
